EBookBackendFile: Dont load the revision if the revision is already loaded

This avoids a small memory leak when multiple clients are connected,
the patch also adds a comment and a little extra locking around access
to the ->revision variable in the ->open() method.

Fixes bug https://bugzilla.gnome.org/show_bug.cgi?id=694730